using System.Collections;
using System.Collections.Generic;
using UnityEngine;

namespace KeyWord
{
    public static class AnimationKeyWord
    {
        public const string ATTACK = "Attack";
        public const string RUN = "IsRun";
        public const string WALK = "IsWalk";
        public const string JUMP = "Jump";
        public const string SKILL2 = "Skill2";
        public const string DAMAGE = "IsDamage";
    }
}